# google-cloud-sdk-rust

./: .gitmodules  .typos.toml  Cargo.toml  flake.nix
.github/: release-drafter.yml
.github/workflows/: audit.yaml  cargo.yaml  release-drafter.yaml  unused.yaml
googleapis/: Cargo.toml  build.rs
googleapis/src/: lib.rs
