[workspace]
members = ["googleapis"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-types = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.package]
edition = "2021"
version = "0.0.0"
authors = ["pranc1ngpegasus"]
