[package]
authors.workspace = true
edition.workspace = true
name = "googleapis"
version.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-build.features = ["prost"]
tonic-build.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["pbjson-types", "prost", "serde"]
